--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ nav a:hover{
   text-align: center;
   color: white;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)),
-    url(ferry.jpg);
+  url(/img/ferry.jpg);
   background-size: cover;
   background-position: center;
   height: 470px;
@@ -375,10 +375,10 @@ nav a:hover {
   position: relative;
   text-align: center;
   color: white;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)), url(ferry.jpg);
+  
   background-size: cover;
   background-position: center;
-  height: 300px;
+  height: 380px;
 }
 
 .logoimg {
